Code Cleanup
Code was shit !